--- a/Codes/global-contact.css
+++ b/Codes/global-contact.css
@@ -47,3 +47,67 @@
   border: 0;
   outline: 0;
 }
+#contact-center-placement{
+  position: absolute;
+  width: 70%;
+  left: 15%;
+  top: 400px;
+}
+#contact-cards{
+  height: 300px;
+  width: 236px;
+  border-radius: 32px;
+  margin-left: 50px;
+  box-shadow: 5px 4px 25.1px rgba(0, 0, 0, 0.25)
+  
+}
+#contact-photo{
+height: 70%;
+width: 100%;
+border-top-left-radius: 32px;
+border-top-right-radius: 32px;
+}
+#top-rated{
+  position: absolute;
+  top: 27px;
+  left: 100px;
+}
+#contact-name{
+  font-family: 'montserrat';
+  font-size: 13px;
+  font-weight: 900;
+  margin: 5px 0 0 15px;
+  color: #003366;
+}
+#contact-location{
+  font-family: 'reem kufi';
+  font-size: 11px;
+  margin: 5px 0 0 15px;
+}
+#get-contact button{
+  font-size: 12px;
+  font-family: 'reem kufi';
+  color: #003366;
+  background-color: #FFCC00;
+  border-radius: 6px;
+  height: 25px;
+  width: 82px;
+  border: 0;
+  margin: 5px 0 0 15px;
+}
+#get-contact button:hover{
+  background-color: #ffda47;
+}
+#gtcn-rating{
+  display: flex;
+  gap: 80px;
+}
+#ratings p{
+  font-family: 'montserrat';
+  color: #003366;
+  font-size: 13px;
+  font-weight: 700;
+  position: absolute;
+  top: 254px;
+  left: 239px;
+}
