--- a/Codes/contactregister.css
+++ b/Codes/contactregister.css
@@ -301,7 +301,7 @@ body {
   border-radius: 52px;
   position: absolute;
   left: 22%;
-  top: 130f0px;
+  top: 1300px;
 }
 #drag-img{
   position: absolute;
