--- a/Codes/th-admin.css
+++ b/Codes/th-admin.css
@@ -148,3 +148,54 @@ h2{
 .app-btn:hover{
     background-color: #ffda47;
 }
+#download-photo{
+    height: 79px;
+    margin-top: 20px;
+    width: 315px;
+    /* padding:5px 20px 20px 10px; */
+    border-radius: 19px;
+    border:1px solid #FFCC00;
+    font-family: 'reem kufi';
+    color: #003366;
+    box-shadow: 6px 4px 9.9px rgba(0, 0, 0, 0.25);
+}
+#download-photo a {
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'montserrat';
+    color: #003366;
+}
+#download-photo a p{
+    display: inline-block;
+    margin-left: 20px; ;
+}
+#download-photo img{
+    margin-left: 10px;
+    margin-top: 20px;
+}
+
+#download-docx{
+    height: 79px;
+    margin-top: 20px;
+    width: 357px;
+    /* padding:5px 20px 20px 10px; */
+    border-radius: 19px;
+    border:1px solid #FFCC00;
+    font-family: 'reem kufi';
+    color: #003366;
+    box-shadow: 6px 4px 9.9px rgba(0, 0, 0, 0.25);
+}
+#download-docx a {
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'montserrat';
+    color: #003366;
+}
+#download-docx a p{
+    display: inline-block;
+    margin-left: 20px; ;
+}
+#download-docx img{
+    margin-left: 10px;
+    margin-top: 20px;
+}
