--- a/Codes/login.css
+++ b/Codes/login.css
@@ -55,13 +55,13 @@ body {
 .nav-link-div {
   position: absolute;
   top: 25px;
-  left: 340px;
+  left: 413px;
   width: 699px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 58px;
+  gap: 73px;
   font-size: 23px;
 }
 /* laptop  */
@@ -363,4 +363,23 @@ body {
   position: relative;
   top: 320px;
   text-align: center;
+}
+#messbx{
+  margin-left: 628px;
+  margin-top: 63px;
+  height: 50px;
+  width: 300px;
+  padding: 30px;
+  border-radius: 9px;
+  box-shadow: 3px 4px 11.4px rgba(0, 0, 0, 0.25);
+}
+#thdai{
+  margin: 0;
+  font-family: 'montserrat';
+  font-weight: 900;
+  color: #003366;
+}
+#mess{
+  color: rgb(255, 32, 32);
+  font-family: 'reem kufi';
 }
