--- a/Codes/viewcontact.css
+++ b/Codes/viewcontact.css
@@ -49,7 +49,7 @@
   font-size: 13px;
 }
 #desc{
-  width: 488px;
+  width: 569px;
 }
 #bold{
   font-family: 'montserrat';
@@ -79,7 +79,7 @@
 }
 #close{
   position: absolute;
-  transform: translate(867px,10px);
+  transform: translate(960px,10px);
   color: #D9D9D9;
   border: 0;
   border-radius: 100px;
@@ -88,4 +88,13 @@
 }
 #close:hover{
   background-color: #FF9A9A;
+}
+#card-blur{
+  position: absolute;
+  top: 0;
+  z-index: 99;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.1);
+  filter: blur(5px);
 }
