--- a/Codes/css/th-admin.css
+++ b/Codes/css/th-admin.css
@@ -29,19 +29,23 @@ body{
     font-size: 24px;
     background-color: #113B65;
     color: #fff;
-    margin-left: 15px;             
+    margin: 0px;
+    margin-left: 20px;             
 }
 #admin-menu a{
     text-decoration:none;
 }
 #admin-menu{
     position: absolute;
-    top: 250px;
+    top: 170px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 #admin-menu p:hover{
     background-color: #275B8E;
 }
-h2{
+#th-admin-head{
     position: absolute;
     left: 45%;
     top: 0;
@@ -54,7 +58,7 @@ h2{
     position: absolute;
     left: 30%;
     top: 100px;
-    height: 600px;
+    height: 60px;
     width: 62%;
     display: grid;
     grid-template-columns: repeat(3,minmax(0,1fr));
@@ -70,6 +74,13 @@ h2{
     border-radius: 10px;
     box-shadow: 6px 4px 9.9px rgba(0, 0, 0, 0.25);
 }
+#th-heading{
+    margin: 0;
+    margin-left: 50%;
+    color: #003366;
+    font-family: 'Montserrat';
+    padding: 50px;
+}
 #applicantheading{
     /* position: absolute; */
     font-family: 'montserrat';
@@ -78,6 +89,9 @@ h2{
     margin: 0;
     margin-left: 10px;
     margin-top: 10px;
+}
+#mgmtcn{
+    margin: 0px;
 }
 #view-application{
     background-color: #00FF1A;
