--- a/Codes/css/th-admin.css
+++ b/Codes/css/th-admin.css
@@ -317,3 +317,40 @@ body{
 #remove-btn:hover{
     background-color: #ff6666;
 }
+#report-placement{
+    position: absolute;
+    left: 23%;
+    top: 150px;
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(2,minmax(0,1fr));
+}
+#report-block{
+    height: 100px;
+    margin-top: 40px;
+    width: 315px;
+    padding: 20px;
+    margin-left: 10px;
+    /* padding:5px 20px 20px 10px; */
+    border-radius: 19px;
+    border:1px solid #FFCC00;
+    font-family: 'reem kufi';
+    color: #003366;
+    box-shadow: 6px 4px 9.9px rgba(0, 0, 0, 0.25);
+}
+#report-block img{
+    height: 30px;
+    width: auto;
+}
+#report-heading{
+    font-family: 'montserrat';
+    font-size: 16px;
+    color: #003366;
+    margin-left: 20px;
+}
+#report-data{
+    font-family: 'montserrat';
+    font-size: 20px;
+    color: #003366;
+    margin-top: 20px;
+}
